# langchain-kreuzberg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.ai-rulez/: config.toml  config.yaml
.github/workflows/: ci.yaml  publish.yaml
src/langchain_kreuzberg/: __init__.py  loader.py
tests/: conftest.py  test_integration.py  test_loader.py  test_loader_async.py
tests/fixtures/: sample.docx
