[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_kreuzberg"]

[project]
name = "langchain-kreuzberg"
version = "0.1.0"
description = "Kreuzberg document loader for LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kreuzberg Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "langchain-core>=1.0,<2.0",
    "kreuzberg>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "mypy>=1.19",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/Goldziher/langchain-kreuzberg"
Repository = "https://github.com/Goldziher/langchain-kreuzberg"
Issues = "https://github.com/Goldziher/langchain-kreuzberg/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "COM812", "ISC001", "ANN401", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "SLF001", "PLR2004", "PLC0415", "PERF401", "PERF402", "TC003"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: real file extraction tests (no mocks, slower)"]

[tool.coverage.run]
source = ["langchain_kreuzberg"]

[tool.coverage.report]
fail_under = 80
